- Created contacts controller that handles CRUD operations - Added Routes to corresponding contacts cpntroller - Added swagger ui to visualize data - Added documnetation API route to view raw json
