# server.js
@@ -2,7 +2,8 @@ const dotenv = require('dotenv');
 dotenv.config();
 
 const routers = require('./routes/index');
-const mongoDb = require("./models/db/connection");
+const contactsRouter = require('./routes/contacts');
+const mongoDb = require('./models/db/connection');
 const bodyParser = require('body-parser');
 const swaggerUi = require('swagger-ui-express');
 const swaggerFile = require('./config/swagger-output.json');
@@ -11,11 +12,16 @@ const PORT = process.env.PORT || 3000;
 
 const express = require('express');
 const app = express();
+
+/* middleware:
+- body parser
+- swagger ui
+ */
 app.use(bodyParser.json()); // Uses body-parser middleware to parse JSON request bodies
 app.use(bodyParser.urlencoded({ extended: true })); // Uses body-parser middleware to parse URL-encoded request bodies
 
 // Hook Swagger UI
-app.use('/doc', swaggerUi.serve, swaggerUi.setup(swaggerFile));
+app.use('/doc-api', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
 (async function startServer() {
     try {
@@ -31,6 +37,7 @@ app.use('/doc', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
 
 app.use(routers);
+app.use(contactsRouter);
 
 
 
